# LexDecks

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfiletest  README.md  cert.pem  docker-compose.yml  key.pem
.cargo/: config.toml
.github/workflows/: prod.yml
assets/images/: CalendarBG.avif  LessonsImage.avif  NavBarLogo.avif  ReviewsImage.avif
assets/styles/: fonts.scss  home.scss  layout.scss  main.scss  variables.scss
assets/styles/components/: navbar.scss
assets/unused/: FullMainQuality50.avif  FullMainQuality70.avif  FullMainQuality80.avif  FullResFullMain.avif  Luke_NoTextTransparent_Light.avif  actual_email.svgz  calender_background.avif
genkeys/: Cargo.toml
genkeys/src/: main.rs
src/: app.rs  header.rs  lib.rs  main.rs
src/components/: avatar.rs  button.rs  calendar.rs  message_box.rs  mod.rs  navbar.rs  study_window.rs  toggle_slider.rs
src/pages/: home.rs  mod.rs  not_found.rs  sign_in.rs  sign_out.rs  test.rs
src/utils/: asset.rs  auth_client.rs  back_utils.rs  cache.rs  cache_db_interface.rs  date_and_time.rs  dynamo_utils.rs  email_template.rs  front_utils.rs  middleware.rs  mod.rs  outcomes.rs  query.rs  shared_truth.rs  shared_utilities.rs  sign_in_lib.rs  user_types.rs
src/utils_and_structs/: back_utils.rs  database_types.rs  date_and_time.rs  db_and_cache.rs  dynamo_utils.rs  email_template.rs  front_utils.rs  middleware.rs  mod.rs  outcomes.rs  queries.rs  shared_truth.rs  shared_utilities.rs  sign_in_lib.rs  ui.rs  user_types.rs
